[package]
name = "petgraph-examples"
version = "0.1.0"
authors = ["Timothy Hobbs"]
edition = "2018"
license-file = "COPYING.LGPL"
license = "LGPL-3.0-or-later"
description = "Petgraph example graphs"
homepage = "https://github.com/timthelion/petgraph-examples"
repository = "https://github.com/timthelion/petgraph-examples"

[dependencies]
petgraph = "*" 
